--- a/index.html
+++ b/index.html
@@ -1,6 +1,363 @@
-<html>
-	<head>
-		<title>Test</title>
-	</head>
-	<body>Hello Word</body>
+ <!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>Ardani</title>
+  <link rel="shortcut icon" type="image/ico" href="img/html.ico"/>
+  <!--bower component path-->
+  <link rel="stylesheet" href="css/bootstrap-theme/bootstrap.min.css">
+  <link rel="stylesheet" href="components/font-awesome-4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="components/animate.css/animate.css">
+  <link rel="stylesheet" href="components/owl-carousel/owl.carousel.css">
+  <link rel="stylesheet" href="components/owl-carousel/owl.theme.css">
+  <link rel="stylesheet" href="css/css3-tips.css">
+
+  <!--style custom-->
+  <link rel="stylesheet" href="css/style.css">
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+  <script src="js/modernizr.custom.js"></script>
+</head>
+<body id="home">
+  <div id="container">
+    <!--begin header-->
+    <header>
+      <nav class="navbar navbar-default linear">
+        <div class="container">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#"><img src="img/logo.png" alt="chicklet"></a>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#home">Home</a></li>
+              <li><a href="#service">Knowledge</a></li>
+              <li><a href="#school">Education</a></li>
+              <li><a href="#skill">Skill</a></li>
+
+              <li><a href="#experience">Experience</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+    </header>
+    <!--end header-->
+    <section class="wide-screen hightlight bg-header">
+      <div class="center-wrapp">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-8 col-sm-push-2 text-center">
+              <div class="animated hidding delay2" data-animated="zoomInUp">
+                <h1>I am Ardani, I am Web Programmer</h1>
+                <p>I focusing on development application for running on web, using LARAVEL framework and API service to build everything you want</p>
+                <a href="mailto:master.ardani@gmail.com" class="btn btn-primary">CONTACT ME NOW</a>
+              </div>
+            </div>
+          </div> <!-- end row -->
+        </div> <!-- end container -->
+      </div>
+      <ul class="list-inline text-center social">
+        <li><a
+          href="mailto:master.ardani@gmail.com" class="hidding animated delay5 top-tip"
+          data-tips="Contact me now using email. i am glad if i can help you" data-animated="bounceInUp">
+          <i class="fa fa-google-plus fa-2x green-icon"></i></a>
+        </li>
+        <li><a
+          href="https://github.com/ardani" class="hidding animated delay6 top-tip"
+          data-animated="bounceInUp" data-tips="Find me on my repository on github">
+          <i class="fa fa-github fa-2x green-icon"></i></a>
+        </li>
+        <li><a
+          href="https://www.facebook.com/ardani89" class="hidding animated delay7 top-tip"
+          data-animated="bounceInUp" data-tips="Find me on my social media. add me become your friend">
+          <i class="fa fa-facebook fa-2x green-icon"></i></a>
+        </li>
+        <li><a
+          href="https://id.linkedin.com/pub/ardani-rohman/87/503/13" class="hidding animated delay8 top-tip"
+          data-animated="bounceInUp" data-tips="my detail portofolio can you look on my linked in.">
+          <i class="fa fa-linkedin-square fa-2x green-icon"></i></a>
+        </li>
+      </ul>
+    </section>
+  <!--end header-->
+
+  <!-- section -->
+  <section class="page" id="service">
+    <div class="container">
+      <div class="title-page">
+        <h2 class="color-primary">Knowledge</h2>
+      </div>
+      <div class="row">
+        <div class="col-md-4 column">
+          <div class="content text-center service hidding animated delay1" data-animated="fadeInDown">
+            <i class="fa fa-gears fa-2x color-primary"></i>
+            <h3>OOP and MVC Concept</h3>
+            <p>Using php focus on Object Oriented Programming for easily maintenance and good development. Use framework Codeigniter, Laravel </p>
+          </div>
+        </div>
+        <div class="col-md-4 column">
+          <div class="content text-center service hidding animated delay2" data-animated="fadeInDown">
+            <i class="fa fa-key fa-2x color-primary"></i>
+            <h3>API service</h3>
+            <p>API service development make we can connect to another programming language</p>
+          </div>
+        </div>
+        <div class="col-md-4 column">
+          <div class="content text-center service hidding animated delay3" data-animated="fadeInDown">
+            <i class="fa fa-database fa-2x color-primary"></i>
+            <h3>Database And System Analyst</h3>
+            <p>Desain and modeling database first to make sure good relationship to another table and data</p>
+          </div>
+        </div>
+      </div><!-- end row -->
+      <div class="row">
+        <div class="col-md-4 column">
+          <div class="content text-center service hidding animated delay4" data-animated="fadeInDown">
+            <i class="fa fa-recycle fa-2x color-primary"></i>
+            <h3>Recycle Software</h3>
+            <p>Help you to recycle software, fix bug and add some feature to yaur application</p>
+          </div>
+        </div>
+        <div class="col-md-4 column">
+          <div class="content text-center service hidding animated delay5" data-animated="fadeInDown">
+            <i class="fa fa-group fa-2x color-primary"></i>
+            <h3>Good Comunication</h3>
+            <p>Build Application, we can talk purpose application and i can give suggestion and realize what you want to application</p>
+          </div>
+        </div>
+        <div class="col-md-4 column">
+          <div class="content text-center service hidding animated delay6" data-animated="fadeInDown">
+            <i class="fa fa-sitemap fa-2x color-primary"></i>
+            <h3>CMS and SEO</h3>
+            <p>For Company Profile, I am offer to create web using CMS base on DRUPAL or Wordpress</p>
+          </div>
+        </div>
+      </div>
+    </div><!-- end container  -->
+  </section>
+  <!-- end section -->
+    <!-- section -->
+    <section class="page bg-grey" id="school">
+      <div class="container">
+        <div class="title-page">
+          <h2 class="color-primary">Education</h2>
+        </div>
+        <div class="row">
+          <div class="col-md-6 column">
+            <div class="content text-center service hidding animated delay1" data-animated="bounceInDown">
+              <i class="fa fa-graduation-cap fa-2x color-primary"></i>
+              <h3>STMIK SINAR NUSANTARA</h3>
+              <p>Bachelor of Degree in Informatics Engineering, Surakarta Central Java Indonesia at December 2012. GPA : 3.78</p>
+            </div>
+          </div>
+          <div class="col-md-6 column">
+            <div class="content text-center service hidding animated delay1" data-animated="bounceInDown">
+              <i class="fa fa-graduation-cap fa-2x color-primary"></i>
+              <h3>STMIK AMIKOM YOGYAKARTA</h3>
+              <p>Magister Of Degree in Informatics Engineering, Yogyakarta Indonesia. now still studying in there</p>
+            </div>
+          </div>
+        </div><!-- end row -->
+      </div><!-- end container  -->
+    </section>
+    <!-- end section -->
+  <!-- section -->
+  <section class="page " id="skill">
+    <div class="container">
+      <div class="title-page">
+        <h2 class="color-primary">Skill</h2>
+      </div>
+      <div class="row">
+        <div class="col-md-6 column">
+          <div class="content hidding animated delay2" data-animated="bounceInLeft">
+            <h3 class="color-primary">Skill Programming</h3>
+            <p>My skill programming until now can you see on right side. I always update my skill according with new technology.</p>
+            <p>if you want to implement new technology. i ready to learn but give me some time to explore that.</p>
+          </div>
+        </div><!-- end col -->
+        <div class="col-md-6 column">
+          <div class="content hidding animated delay5" data-animated="bounceInRight">
+            <label for="#">HTML</label>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
+                   style="min-width: 2em; width: 100%;">
+                100%
+              </div>
+            </div>
+            <label for="#">CSS</label>
+            <div class="progress">
+              <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="2" aria-valuemin="0"
+                   aria-valuemax="100" style="min-width: 2em; width: 80%;">
+                80%
+              </div>
+            </div>
+            <label for="#">JQUERY</label>
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0"
+                   aria-valuemax="100" style="min-width: 2em; width: 100%;">
+                100%
+              </div>
+            </div>
+            <label for="#">PHP OOP Laravel, Codeigniter</label>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="2" aria-valuemin="0"
+                   aria-valuemax="100" style="min-width: 2em; width: 100%;">
+                100%
+              </div>
+            </div>
+            <label for="#">ANGULAR JS</label>
+            <div class="progress">
+              <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="2" aria-valuemin="0"
+                   aria-valuemax="100" style="min-width: 2em; width: 60%;">
+                60%
+              </div>
+            </div>
+            <label for="#">DATABASE : MySQL, PostgreSQL</label>
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0"
+                   aria-valuemax="100" style="min-width: 2em; width: 90%;">
+                90%
+              </div>
+            </div>
+            <label for="#">CMS Drupal Wordpress</label>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="2" aria-valuemin="0"
+                   aria-valuemax="100" style="min-width: 2em; width: 70%;">
+                70%
+              </div>
+            </div>
+          </div>
+        </div>
+      </div><!-- end row -->
+    </div><!-- end container -->
+  </section>
+  <!-- end section -->
+    <!-- section -->
+    <section class="page bg-grey" id="experience">
+      <div class="container">
+        <div class="title-page">
+          <h2 class="color-primary">Work Experience</h2>
+        </div>
+        <div class="row">
+          <div class="col-md-3 column">
+            <div class="content text-center service hidding animated delay1" data-animated="slideInUp">
+              <i class="fa fa-laptop fa-2x color-primary"></i>
+              <h3>SKYSHI DIGITAL INDONESIA</h3>
+              <p>Web Programmer Focus develop Web Ecommerce Drupal for Reebonz.com 2015-now</p>
+            </div>
+          </div>
+          <div class="col-md-3 column">
+            <div class="content text-center service hidding animated delay2" data-animated="slideInUp">
+              <i class="fa fa-laptop fa-2x color-primary"></i>
+              <h3>OBJ OFFICE</h3>
+              <p>Freelance Web Programmer Focus develop Point Of Sales Application dan Inventory</p>
+            </div>
+          </div>
+          <div class="col-md-3 column">
+            <div class="content text-center service hidding animated delay3" data-animated="slideInUp">
+              <i class="fa fa-laptop fa-2x color-primary"></i>
+              <h3>PT ROSALIA EXPRESS</h3>
+              <p>Freelance Web Programmer Focus develop ERP include payroll system</p>
+            </div>
+          </div>
+          <div class="col-md-3 column">
+            <div class="content text-center service hidding animated delay4" data-animated="slideInUp">
+              <i class="fa fa-laptop fa-2x color-primary"></i>
+              <h3>CV MODAL JUJUR </h3>
+              <p>Freelance Web Programmer Focus develop Point Of Sales, inventory include payroll system</p>
+            </div>
+          </div>
+        </div><!-- end row -->
+      </div><!-- end container -->
+    </section>
+    <!-- end section -->
+
+  <!-- section -->
+  <section class="page bg-grey" id="contact">
+    <div class="container">
+      <div class="title-page">
+        <h2 class="color-primary">Contact</h2>
+      </div>
+      <div class="row">
+        <div class="col-md-6 column">
+          <div class="content contact hidding animated delay2" data-animated="bounceInUp">
+            <h3 class="color-primary">Get In Touch With Me</h3>
+            <form method="post" action="MAILTO:master.ardani@gmail.com" enctype="text/plain">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" placeholder="Enter Name">
+              </div>
+              <div class="form-group">
+                <label for="email">Email Address</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter Email">
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control" rows="3" id="message" placeholder="Message"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Send Message</button>
+            </form>
+          </div>
+        </div>
+
+        <div class="col-md-6 column">
+          <div class="content hidding animated delay6" data-animated="bounceInUp">
+            <h3 class="color-primary">Contact Info</h3>
+            <div class="address">
+              <address>
+                <strong class="color-primary">Contact Me.</strong><br>
+                email : master.ardani@gmail.com
+              </address>
+              <address>
+                <strong class="color-primary">Full Name</strong><br>
+                <a href="#" class="color-primary">Nur Rohman Ardani</a>
+              </address>
+            </div>
+          </div>
+        </div>
+      </div><!-- end row -->
+    </div><!-- end container -->
+  </section>
+  <!-- end section -->
+
+  <footer class="bg-primary">
+    <div class="container">
+      <p class="text-center cp-right hidding animated delay2" data-animated="bounceInUp">Ardani Web Programmer. Copyright@2015 </p>
+    </div>
+  </footer>
+</div><!-- /#container -->
+<!--================================================modal=====================================-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script type="text/javascript" src="components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="components/jquery.inview/jquery.inview.min.js"></script>
+<script type="text/javascript" src="components/owl-carousel/owl.carousel.min.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript">
+WebFontConfig = {
+  google: { families: [ 'Raleway:400,300,700,500:latin' ] }
+};
+(function() {
+  var wf = document.createElement('script');
+  wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+  '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+  wf.type = 'text/javascript';
+  wf.async = 'true';
+  var s = document.getElementsByTagName('script')[0];
+  s.parentNode.insertBefore(wf, s);
+})(); </script>
+</body>
 </html>
