update photo profile

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse">
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#home">Home</a></li>
               <li><a href="#service">Knowledge</a></li>
@@ -59,6 +59,11 @@
     <section class="wide-screen hightlight bg-header">
       <div class="center-wrapp">
         <div class="container">
+          <div class="row" style="margin-bottom: 20px">
+            <div class="col-sm-4 col-sm-push-4 text-center">
+              <img class="img-responsive img-circle img-thumbnail" src="img/profile2.jpg">
+            </div>
+          </div>
           <div class="row">
             <div class="col-sm-8 col-sm-push-2 text-center">
               <div class="animated hidding delay2" data-animated="zoomInUp">
