--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <!--style custom-->
   <link rel="stylesheet" href="css/style.css">
   <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <script src="js/html5shiv.min.js"></script>
+  <script src="js/respond.min.js"></script>
   <![endif]-->
   <script src="js/modernizr.custom.js"></script>
 </head>
@@ -346,7 +346,7 @@
   </footer>
 </div><!-- /#container -->
 <!--================================================modal=====================================-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script type="text/javascript" src="components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="components/jquery.inview/jquery.inview.min.js"></script>
 <script type="text/javascript" src="components/owl-carousel/owl.carousel.min.js"></script>
