--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="js/modernizr.custom.js"></script>
 </head>
 <body id="home">
+ <script type='text/javascript' data-cfasync='false'>window.purechatApi = { l: [], t: [], on: function () { this.l.push(arguments); } }; (function () { var done = false; var script = document.createElement('script'); script.async = true; script.type = 'text/javascript'; script.src = 'https://app.purechat.com/VisitorWidget/WidgetScript'; document.getElementsByTagName('HEAD').item(0).appendChild(script); script.onreadystatechange = script.onload = function (e) { if (!done && (!this.readyState || this.readyState == 'loaded' || this.readyState == 'complete')) { var w = new PCWidget({c: 'e5c5759e-9fcf-492c-80ca-8844593a517f', f: true }); done = true; } }; })();</script>
   <div id="container">
     <!--begin header-->
     <header>
