--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
 })();
 </script>
 <!--End of HappyFox Live Chat Script-->
+<!-- Smartsupp Live Chat script -->
+<script type="text/javascript">
+var _smartsupp = _smartsupp || {};
+_smartsupp.key = 'bfdd33591ef85b67833d42ea47c27a7c9678362c';
+window.smartsupp||(function(d) {
+	var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+	s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+	c.type='text/javascript';c.charset='utf-8';c.async=true;
+	c.src='//www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+})(document);
+</script>
+
 
   <div id="container">
     <!--begin header-->
