--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <script src="js/respond.min.js"></script>
   <![endif]-->
   <script src="js/modernizr.custom.js"></script>
+  <script type="text/javascript">window.liveSettings={api_key:"0f5d89b8cfbd47bc9b3d1c8d8a5f21f1"};</script>
+  <script type="text/javascript" src="//cdn.transifex.com/live.js"></script>
 </head>
 <body id="home">
 <!-- Smartsupp Live Chat script -->
@@ -376,6 +378,6 @@ WebFontConfig = {
   wf.async = 'true';
   var s = document.getElementsByTagName('script')[0];
   s.parentNode.insertBefore(wf, s);
-})(); </script>
+})(); </script>        
 </body>
 </html>
