--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@ window.smartsupp||(function(d) {
             <a class="navbar-brand" href="#"><img src="img/logo.png" alt="chicklet"></a>
           </div>
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
+          <!-- Collect the nav 
+s, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#home">Home</a></li>
@@ -82,8 +83,10 @@ window.smartsupp||(function(d) {
           <div class="row">
             <div class="col-sm-8 col-sm-push-2 text-center">
               <div class="animated hidding delay2" data-animated="zoomInUp">
-                <h1>I am Ardani, I am Web Programmer</h1>
-                <p>I focusing on development application for running on web, using LARAVEL framework and API service to build everything you want</p>
+                <h1>I am Ardani, I am Fullstack Programmer</h1>
+                <p>I am full-stack developer experienced in E-commerce website application, fluently using Laravel as main weapon to build something useful and do integrate with new technologies. another experienced build web application using Codeigniter, Slim Framework, Lumen, Drupal 7, Vuejs.
+familiar with technology Solr Indexing System, Queue SQS, Cache Management, API Design Restful.
+I am seeking opportunities to build IT solutions employing various technologies that would best fit the client's needs and for me analysis and solve problems is always interesting to do.</p>
                 <a href="mailto:master.ardani@gmail.com" class="btn btn-primary">CONTACT ME NOW</a>
               </div>
             </div>
@@ -107,7 +110,7 @@ window.smartsupp||(function(d) {
           <i class="fa fa-facebook fa-2x green-icon"></i></a>
         </li>
         <li><a
-          href="https://id.linkedin.com/pub/ardani-rohman/87/503/13" class="hidding animated delay8 top-tip"
+          href="https://id.linkedin.com/in/ardani-rohman-13950387" class="hidding animated delay8 top-tip"
           data-animated="bounceInUp" data-tips="my detail portofolio can you look on my linked in.">
           <i class="fa fa-linkedin-square fa-2x green-icon"></i></a>
         </li>
