--- a/index.html
+++ b/index.html
@@ -83,10 +83,9 @@ s, forms, and other content for toggling -->
           <div class="row">
             <div class="col-sm-8 col-sm-push-2 text-center">
               <div class="animated hidding delay2" data-animated="zoomInUp">
-                <h1>I am Ardani, I am Fullstack Programmer</h1>
+                <h1>I am Ardani Fullstack Developer</h1>
                 <p>I am full-stack developer experienced in E-commerce website application, fluently using Laravel as main weapon to build something useful and do integrate with new technologies. another experienced build web application using Codeigniter, Slim Framework, Lumen, Drupal 7, Vuejs.
-familiar with technology Solr Indexing System, Queue SQS, Cache Management, API Design Restful.
-I am seeking opportunities to build IT solutions employing various technologies that would best fit the client's needs and for me analysis and solve problems is always interesting to do.</p>
+familiar with technology Solr Indexing System, Queue SQS, Cache Management, API Design Restful.</p>
                 <a href="mailto:master.ardani@gmail.com" class="btn btn-primary">CONTACT ME NOW</a>
               </div>
             </div>
