--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
                 60%
               </div>
             </div>
-            <label for="#">DATABASE : MySQL, PostgreSQL</label>
+            <label for="#">DATABASE : MySQL</label>
             <div class="progress">
               <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0"
                    aria-valuemax="100" style="min-width: 2em; width: 90%;">
@@ -258,6 +258,13 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
             <label for="#">CMS Drupal Wordpress</label>
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="2" aria-valuemin="0"
+                   aria-valuemax="100" style="min-width: 2em; width: 70%;">
+                70%
+              </div>
+            </div>
+	   <label for="#">VUE JS</label>
+            <div class="progress">
+              <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="2" aria-valuemin="0"
                    aria-valuemax="100" style="min-width: 2em; width: 70%;">
                 70%
               </div>
