--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="ardani rohman fullstack programmer backend frontend php vuejs laravel from indonesia ">
+  <meta name="keywords" content="fullstack programmer backend frontend senoir php vuejs laravel5 laravel senior yogyakarta indonesia freelance remote">
+  <meta name="author" content="Ardani Rohman">
   <title>Ardani</title>
   <link rel="shortcut icon" type="image/ico" href="img/html.ico"/>
   <!--bower component path-->
@@ -84,7 +85,7 @@ s, forms, and other content for toggling -->
             <div class="col-sm-8 col-sm-push-2 text-center">
               <div class="animated hidding delay2" data-animated="zoomInUp">
                 <h1>I am Ardani Fullstack Developer</h1>
-                <p>I am full-stack developer experienced in E-commerce website application, fluently using Laravel as main weapon to build something useful and do integrate with new technologies. another experienced build web application using Codeigniter, Slim Framework, Lumen, Drupal 7, Vuejs.
+                <p class="overview">I am full-stack developer experienced in E-commerce website application, fluently using Laravel as main weapon to build something useful and do integrate with new technologies. another experienced build web application using Codeigniter, Slim Framework, Lumen, Drupal 7, Vuejs.
 familiar with technology Solr Indexing System, Queue SQS, Cache Management, API Design Restful.</p>
                 <a href="mailto:master.ardani@gmail.com" class="btn btn-primary">CONTACT ME NOW</a>
               </div>
