--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ s, forms, and other content for toggling -->
           <div class="row">
             <div class="col-sm-8 col-sm-push-2 text-center">
               <div class="animated hidding delay2" data-animated="zoomInUp">
-                <h1>I am Ardani Fullstack Developer</h1>
-                <p class="overview">I am full-stack developer experienced in E-commerce website application, fluently using Laravel as main weapon to build something useful and do integrate with new technologies. another experienced build web application using Codeigniter, Slim Framework, Lumen, Drupal 7, Vuejs.
+                <h1>"Ardani, Fullstack Developer"</h1>
+                <p class="overview">I have experienced in E-commerce website application, fluently using Laravel as main weapon to build something useful and do integrate with new technologies. another experienced build web application using Codeigniter, Slim Framework, Lumen, Drupal 7, Vuejs.
 familiar with technology Solr Indexing System, Queue SQS, Cache Management, API Design Restful.</p>
                 <a href="mailto:master.ardani@gmail.com" class="btn btn-primary">CONTACT ME NOW</a>
               </div>
@@ -329,15 +329,15 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
             <form method="post" action="MAILTO:master.ardani@gmail.com" enctype="text/plain">
               <div class="form-group">
                 <label for="name">Name</label>
-                <input type="text" class="form-control" id="name" placeholder="Enter Name">
+                <input type="text" name="name" class="form-control" id="name" placeholder="Enter Name">
               </div>
               <div class="form-group">
                 <label for="email">Email Address</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter Email">
+                <input type="email" name="email" class="form-control" id="email" placeholder="Enter Email">
               </div>
               <div class="form-group">
                 <label for="message">Message</label>
-                <textarea class="form-control" rows="3" id="message" placeholder="Message"></textarea>
+                <textarea class="form-control" rows="3" id="message" placeholder="Message" name="message"></textarea>
               </div>
               <button type="submit" class="btn btn-primary">Send Message</button>
             </form>
