--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="ardani rohman fullstack programmer backend frontend php vuejs laravel from indonesia ">
-  <meta name="keywords" content="fullstack programmer backend frontend senoir php vuejs laravel5 laravel senior yogyakarta indonesia freelance remote">
+  <meta name="description" content="ardani rohman fullstack programmer backend frontend php vuejs reactjs nodejs laravel from indonesia ">
+  <meta name="keywords" content="fullstack programmer backend frontend senoir php vuejs reactjs nodejs laravel5 laravel senior yogyakarta indonesia freelance remote">
   <meta name="author" content="Ardani Rohman">
   <title>Ardani</title>
   <link rel="shortcut icon" type="image/ico" href="img/html.ico"/>
@@ -235,21 +235,21 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
                 100%
               </div>
             </div>
-            <label for="#">PHP OOP Laravel, Codeigniter</label>
+            <label for="#">PHP OOP (Laravel, Codeigniter)</label>
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="2" aria-valuemin="0"
                    aria-valuemax="100" style="min-width: 2em; width: 100%;">
                 100%
               </div>
             </div>
-            <label for="#">ANGULAR JS</label>
+            <label for="#">ANGULAR JS 1</label>
             <div class="progress">
               <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="2" aria-valuemin="0"
                    aria-valuemax="100" style="min-width: 2em; width: 60%;">
                 60%
               </div>
             </div>
-            <label for="#">DATABASE : MySQL</label>
+            <label for="#">DATABASE (MySQL)</label>
             <div class="progress">
               <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0"
                    aria-valuemax="100" style="min-width: 2em; width: 90%;">
@@ -263,9 +263,23 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
                 70%
               </div>
             </div>
-	   <label for="#">VUE JS</label>
+	          <label for="#">VUE JS</label>
             <div class="progress">
               <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="2" aria-valuemin="0"
+                   aria-valuemax="100" style="min-width: 2em; width: 70%;">
+                70%
+              </div>
+            </div>
+            <label for="#">REACT & REDUX</label>
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0"
+                   aria-valuemax="100" style="min-width: 2em; width: 70%;">
+                70%
+              </div>
+            </div>
+            <label for="#">NODE JS (Express Js)</label>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="2" aria-valuemin="0"
                    aria-valuemax="100" style="min-width: 2em; width: 70%;">
                 70%
               </div>
