--- a/index.html
+++ b/index.html
@@ -180,18 +180,11 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
           <h2 class="color-primary">Education</h2>
         </div>
         <div class="row">
-          <div class="col-md-6 column">
+          <div class="col-md-12 column">
             <div class="content text-center service hidding animated delay1" data-animated="bounceInDown">
               <i class="fa fa-graduation-cap fa-2x color-primary"></i>
               <h3>STMIK SINAR NUSANTARA</h3>
               <p>Bachelor of Degree in Informatics Engineering, Surakarta Central Java Indonesia at December 2012. GPA : 3.78</p>
-            </div>
-          </div>
-          <div class="col-md-6 column">
-            <div class="content text-center service hidding animated delay1" data-animated="bounceInDown">
-              <i class="fa fa-graduation-cap fa-2x color-primary"></i>
-              <h3>STMIK AMIKOM YOGYAKARTA</h3>
-              <p>Magister Of Degree in Informatics Engineering, Yogyakarta Indonesia. now still studying in there</p>
             </div>
           </div>
         </div><!-- end row -->
@@ -214,20 +207,6 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
         </div><!-- end col -->
         <div class="col-md-6 column">
           <div class="content hidding animated delay5" data-animated="bounceInRight">
-            <label for="#">HTML</label>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
-                   style="min-width: 2em; width: 100%;">
-                100%
-              </div>
-            </div>
-            <label for="#">CSS</label>
-            <div class="progress">
-              <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="2" aria-valuemin="0"
-                   aria-valuemax="100" style="min-width: 2em; width: 80%;">
-                80%
-              </div>
-            </div>
             <label for="#">JQUERY</label>
             <div class="progress">
               <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0"
@@ -242,28 +221,14 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
                 100%
               </div>
             </div>
-            <label for="#">ANGULAR JS 1</label>
-            <div class="progress">
-              <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="2" aria-valuemin="0"
-                   aria-valuemax="100" style="min-width: 2em; width: 60%;">
-                60%
-              </div>
-            </div>
-            <label for="#">DATABASE (MySQL)</label>
+            <label for="#">DATABASE (MySQL, PostgreSQL, MongoDB)</label>
             <div class="progress">
               <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0"
-                   aria-valuemax="100" style="min-width: 2em; width: 90%;">
+                   aria-valuemax="100" style="min-width: 2em; width: 100%;">
                 90%
               </div>
             </div>
-            <label for="#">CMS Drupal Wordpress</label>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="2" aria-valuemin="0"
-                   aria-valuemax="100" style="min-width: 2em; width: 70%;">
-                70%
-              </div>
-            </div>
-	          <label for="#">VUE JS</label>
+	    <label for="#">VUE JS</label>
             <div class="progress">
               <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="2" aria-valuemin="0"
                    aria-valuemax="100" style="min-width: 2em; width: 70%;">
@@ -273,14 +238,14 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
             <label for="#">REACT & REDUX</label>
             <div class="progress">
               <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0"
-                   aria-valuemax="100" style="min-width: 2em; width: 70%;">
+                   aria-valuemax="100" style="min-width: 2em; width: 100%;">
                 70%
               </div>
             </div>
             <label for="#">NODE JS (Express Js)</label>
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="2" aria-valuemin="0"
-                   aria-valuemax="100" style="min-width: 2em; width: 70%;">
+                   aria-valuemax="100" style="min-width: 2em; width: 100%;">
                 70%
               </div>
             </div>
@@ -297,32 +262,60 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
           <h2 class="color-primary">Work Experience</h2>
         </div>
         <div class="row">
+	 <div class="col-md-3 column">
+            <div class="content text-center service hidding animated delay1" data-animated="slideInUp">
+              <i class="fa fa-laptop fa-2x color-primary"></i>
+              <h3>AgencyAnalytics</h3>
+              <p>Software Engineering focus develop web for reporting for Marketing Agencies</p>
+            </div>
+          </div>
+  	  <div class="col-md-3 column">
+            <div class="content text-center service hidding animated delay1" data-animated="slideInUp">
+              <i class="fa fa-laptop fa-2x color-primary"></i>
+              <h3>Okadoc</h3>
+              <p>Frontend Developer focus develop web for find nearby doctors, book doctor's appointments online, read doctors review online</p>
+            </div>
+          </div>
+   	  <div class="col-md-3 column">
+            <div class="content text-center service hidding animated delay1" data-animated="slideInUp">
+              <i class="fa fa-laptop fa-2x color-primary"></i>
+              <h3>Fundplace</h3>
+              <p>Software Developer focus develop web for investors to gain access to unique real estate opportunities</p>
+            </div>
+          </div>
+	  <div class="col-md-3 column">
+            <div class="content text-center service hidding animated delay1" data-animated="slideInUp">
+              <i class="fa fa-laptop fa-2x color-primary"></i>
+              <h3>Fundplace</h3>
+              <p>Software Developer focus develop web for investors to gain access to unique real estate opportunities</p>
+            </div>
+          </div>
           <div class="col-md-3 column">
             <div class="content text-center service hidding animated delay1" data-animated="slideInUp">
               <i class="fa fa-laptop fa-2x color-primary"></i>
               <h3>SKYSHI DIGITAL INDONESIA</h3>
-              <p>Web Programmer Focus develop Web Ecommerce Drupal for Reebonz.com 2015-now</p>
+              <p>Web Programmer focus develop Web Ecommerce Drupal for Reebonz.com</p>
             </div>
           </div>
           <div class="col-md-3 column">
             <div class="content text-center service hidding animated delay2" data-animated="slideInUp">
               <i class="fa fa-laptop fa-2x color-primary"></i>
               <h3>OBJ OFFICE</h3>
-              <p>Freelance Web Programmer Focus develop Point Of Sales Application dan Inventory</p>
+              <p>Freelance Web Programmer focus develop Point Of Sales Application dan Inventory</p>
             </div>
           </div>
           <div class="col-md-3 column">
             <div class="content text-center service hidding animated delay3" data-animated="slideInUp">
               <i class="fa fa-laptop fa-2x color-primary"></i>
               <h3>PT ROSALIA EXPRESS</h3>
-              <p>Freelance Web Programmer Focus develop ERP include payroll system</p>
+              <p>Freelance Web Programmer focus develop ERP include payroll system</p>
             </div>
           </div>
           <div class="col-md-3 column">
             <div class="content text-center service hidding animated delay4" data-animated="slideInUp">
               <i class="fa fa-laptop fa-2x color-primary"></i>
               <h3>CV MODAL JUJUR </h3>
-              <p>Freelance Web Programmer Focus develop Point Of Sales, inventory include payroll system</p>
+              <p>Freelance Web Programmer focus develop Point Of Sales, inventory include payroll system</p>
             </div>
           </div>
         </div><!-- end row -->
