--- a/index.html
+++ b/index.html
@@ -290,6 +290,8 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
               <p>Web Programmer focus develop Web Ecommerce Drupal for Reebonz.com</p>
             </div>
           </div>
+      </div>
+       <div class="row">
           <div class="col-md-3 column">
             <div class="content text-center service hidding animated delay3" data-animated="slideInUp">
               <i class="fa fa-laptop fa-2x color-primary"></i>
