--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
 
   <footer class="bg-primary">
     <div class="container">
-      <p class="text-center cp-right hidding animated delay2" data-animated="bounceInUp">Ardani Web Programmer. Copyright@2015 </p>
+      <p class="text-center cp-right hidding animated delay2" data-animated="bounceInUp">Ardani. 2015 </p>
     </div>
   </footer>
 </div><!-- /#container -->
