--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
         <li><a
           href="mailto:master.ardani@gmail.com" class="hidding animated delay5 top-tip"
           data-tips="Contact me now using email. i am glad if i can help you" data-animated="bounceInUp">
-          <i class="fa fa-google-plus fa-2x green-icon"></i></a>
+          <i class="fa fa-envelope fa-2x green-icon"></i></a>
         </li>
         <li><a
           href="https://github.com/ardani" class="hidding animated delay6 top-tip"
