--- a/index.html
+++ b/index.html
@@ -202,14 +202,7 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
         </div><!-- end col -->
         <div class="col-md-6 column">
           <div class="content hidding animated delay5" data-animated="bounceInRight">
-            <label for="#">JQUERY</label>
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0"
-                   aria-valuemax="100" style="min-width: 2em; width: 100%;">
-                100%
-              </div>
-            </div>
-            <label for="#">PHP OOP (Laravel, Codeigniter)</label>
+            <label for="#">Laravel</label>
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="2" aria-valuemin="0"
                    aria-valuemax="100" style="min-width: 2em; width: 100%;">
@@ -227,14 +220,14 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
             <div class="progress">
               <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="2" aria-valuemin="0"
                    aria-valuemax="100" style="min-width: 2em; width: 100%;">
-                70%
+                100%
               </div>
             </div>
-            <label for="#">REACT & REDUX</label>
+            <label for="#">REACT JS</label>
             <div class="progress">
               <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0"
                    aria-valuemax="100" style="min-width: 2em; width: 100%;">
-                70%
+                100%
               </div>
             </div>
             <label for="#">NODE JS (Express Js)</label>
