--- a/index.html
+++ b/index.html
@@ -203,40 +203,11 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
         <div class="col-md-6 column">
           <div class="content hidding animated delay5" data-animated="bounceInRight">
             <label for="#">Laravel</label>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="2" aria-valuemin="0"
-                   aria-valuemax="100" style="min-width: 2em; width: 100%;">
-                100%
-              </div>
-            </div>
             <label for="#">DATABASE (MySQL, PostgreSQL, MongoDB)</label>
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0"
-                   aria-valuemax="100" style="min-width: 2em; width: 100%;">
-                90%
-              </div>
-            </div>
 	    <label for="#">VUE JS</label>
-            <div class="progress">
-              <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="2" aria-valuemin="0"
-                   aria-valuemax="100" style="min-width: 2em; width: 100%;">
-                100%
-              </div>
-            </div>
             <label for="#">REACT JS</label>
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0"
-                   aria-valuemax="100" style="min-width: 2em; width: 100%;">
-                100%
-              </div>
-            </div>
             <label for="#">NODE JS (Express Js)</label>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="2" aria-valuemin="0"
-                   aria-valuemax="100" style="min-width: 2em; width: 100%;">
-                70%
-              </div>
-            </div>
+            <label for="#">GraphQL</label>
           </div>
         </div>
       </div><!-- end row -->
