--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
         </div><!-- end col -->
         <div class="col-md-6 column">
           <div class="content hidding animated delay5" data-animated="bounceInRight">
-            <label for="#">Laravel</label>
-            <label for="#">DATABASE (MySQL, PostgreSQL, MongoDB)</label>
-	    <label for="#">VUE JS</label>
-            <label for="#">REACT JS</label>
-            <label for="#">NODE JS (Express Js)</label>
-            <label for="#">GraphQL</label>
+            <h4 class="color-primary">Laravel</h4>
+            <h4 class="color-primary">DATABASE (MySQL, PostgreSQL, MongoDB)</h4>
+	    <h4 class="color-primary">VUE JS</h4>
+            <h4 class="color-primary">REACT JS</h4>
+            <h4 class="color-primary">NODE JS (Express Js)</h4>
+            <h4 class="color-primary">GraphQL</h4>
           </div>
         </div>
       </div><!-- end row -->
