--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
             <div class="content text-center service hidding animated delay1" data-animated="bounceInDown">
               <i class="fa fa-graduation-cap fa-2x color-primary"></i>
               <h3>STMIK SINAR NUSANTARA</h3>
-              <p>Bachelor of Degree in Informatics Engineering, Surakarta Central Java Indonesia at December 2012. GPA : 3.78</p>
+              <p>Bachelor of Degree in Informatics Engineering, Surakarta Central Java Indonesia at December 2012</p>
             </div>
           </div>
         </div><!-- end row -->
