--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
         <div class="col-md-6 column">
           <div class="content hidding animated delay2" data-animated="bounceInLeft">
             <h3 class="color-primary">Skill Programming</h3>
-            <p>My skill programming until now can you see on right side. I always update my skill according with new technology.</p>
-            <p>if you want to implement new technology. i ready to learn but give me some time to explore that.</p>
+            <p>My skill programming until now can you see on right side. I always update my skills according with new technology.</p>
+            <p>if you want to implement new technology. i'm ready to learn but give me time to explore that.</p>
           </div>
         </div><!-- end col -->
         <div class="col-md-6 column">
