--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ window.smartsupp||(function(d) {
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img src="img/logo.png" alt="chicklet"></a>
+            <a class="navbar-brand" href="commhub://bca/login"><img src="img/logo.png" alt="chicklet"></a>
           </div>
 
           <!-- Collect the nav 
@@ -327,7 +327,7 @@ familiar with technology Solr Indexing System, Queue SQS, Cache Management, API 
 
   <footer class="bg-primary">
     <div class="container">
-      <p class="text-center cp-right hidding animated delay2" data-animated="bounceInUp"><a href="commhub://bca/login">Ardani. 2021 </a></p>
+      <p class="text-center cp-right hidding animated delay2" data-animated="bounceInUp">Ardani. 2021</p>
     </div>
   </footer>
 </div><!-- /#container -->
