--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <script defer src="all.js"></script>
 	<!-- Theme CSS -->
 	<link id="theme-style" rel="stylesheet" href="risen.css">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
 	<div class="container-fluid">
